and set it to `false` (its default), which was added in 6.3.0.

Security::
* The fields returned as part of the mappings section by get index, get
mappings, get field mappings, and field capabilities API are now only the
ones that the user is authorized to access in case field level security is enabled.

//[float]
//=== New Features

//[float]
//=== Enhancements

[float]
=== Bug Fixes

Fixed prerelease version of elasticsearch in the `deb` package to sort before GA versions
({pull}29000[#29000])

Rollup::
* Validate timezone in range queries to ensure they match the selected job when
searching ({pull}30338[#30338])

[float]
=== Regressions
Fail snapshot operations early when creating or deleting a snapshot on a repository that has been
written to by an older Elasticsearch after writing to it with a newer Elasticsearch version. ({pull}30140[#30140])

Fix NPE when CumulativeSum agg encounters null value/empty bucket ({pull}29641[#29641])
Do not fail snapshot when deleting a missing snapshotted file ({pull}30332[#30332])

//[float]
//=== Regressions

//[float]
//=== Known Issues

[[release-notes-6.4.0]]
== {es} 6.4.0

coming[6.4.0]

//[float]
[[breaking-6.4.0]]
//=== Breaking Changes

//[float]
//=== Breaking Java Changes

//[float]
//=== Deprecations

[float]
=== New Features

The new <<mapping-ignored-field,`_ignored`>> field allows to know which fields
got ignored at index time because of the <<ignore-malformed,`ignore_malformed`>>
option. ({pull}30140[#29658])

A new analysis plugin called `analysis_nori` that exposes the Lucene Korean
analysis module.  ({pull}30397[#30397])

[float]
=== Enhancements

{ref-64}/breaking_64_api_changes.html#copy-source-settings-on-resize[Allow copying source settings on index resize operations] ({pull}30255[#30255])

Added new "Request" object flavored request methods. Prefer these instead of the
multi-argument versions. ({pull}29623[#29623])

The cluster state listener to decide if watcher should be